--- a/routes.yaml
+++ b/routes.yaml
@@ -2,4 +2,4 @@ app_name: company-documents.web.ch.gov.uk
 group: web
 weight: 991
 routes:
-   1: ^/company-documents/health-check
+   1: ^/company-documents/healthcheck/*
