Add company details page and controller

--- a/routes.yaml
+++ b/routes.yaml
@@ -4,3 +4,4 @@ weight: 991
 routes:
    1: ^/company-documents/healthcheck
    2: ^/company-documents/view-correspondence
+   3: ^/company-documents/(.*)/details
