--- a/pom.xml
+++ b/pom.xml
@@ -16,10 +16,15 @@
         <java.version>1.8</java.version>
         <org.mapstruct.version>1.3.0.Final</org.mapstruct.version>
         <hamcrest-all-version>1.3</hamcrest-all-version>
+        <thymeleaf-layout-dialect.version>2.3.0</thymeleaf-layout-dialect.version>
+        <thymeleaf-extras-java8time.version>3.0.1.RELEASE</thymeleaf-extras-java8time.version>
         <spring-security-core.version>5.2.5.RELEASE</spring-security-core.version>
         <spring-security-config.version>5.0.8.RELEASE</spring-security-config.version>
         <spring-security-web.version>5.0.8.RELEASE</spring-security-web.version>
         <java-session-handler.version>2.0.0-rc4</java-session-handler.version>
+        <api-sdk-java.version>4.2.25</api-sdk-java.version>
+        <sdk-manager-java.version>1.4.0-rc1</sdk-manager-java.version>
+        <snakeyaml.version>1.21</snakeyaml.version>
         <start-class>uk.gov.companieshouse.web.companydocuments.CompanyDocumentsWebApplication</start-class>
     </properties>
 
@@ -90,6 +95,24 @@
             <groupId>uk.gov.companieshouse</groupId>
             <artifactId>java-session-handler</artifactId>
             <version>${java-session-handler.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>uk.gov.companieshouse</groupId>
+            <artifactId>api-sdk-java</artifactId>
+            <version>${api-sdk-java.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>uk.gov.companieshouse</groupId>
+            <artifactId>sdk-manager-java</artifactId>
+            <version>${sdk-manager-java.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>${snakeyaml.version}</version>
         </dependency>
     </dependencies>
 
