--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <sdk-manager-java.version>1.4.0-rc1</sdk-manager-java.version>
         <snakeyaml.version>1.21</snakeyaml.version>
         <structured-logging.version>1.5.0-rc2</structured-logging.version>
+        <web-security-java.version>1.3.1</web-security-java.version>
 
         <start-class>uk.gov.companieshouse.web.companydocuments.CompanyDocumentsWebApplication</start-class>
     </properties>
@@ -115,6 +116,12 @@
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
             <version>${snakeyaml.version}</version>
+        </dependency>
+
+       <dependency>
+            <groupId>uk.gov.companieshouse</groupId>
+            <artifactId>web-security-java</artifactId>
+            <version>${web-security-java.version}</version>
         </dependency>
 
         <!-- Logging dependencies -->
