--- a/routes.yaml
+++ b/routes.yaml
@@ -3,5 +3,4 @@ group: web
 weight: 991
 routes:
    1: ^/company-documents/healthcheck
-   2: ^/company-documents/view-correspondence
-   3: ^/company-documents/(.*)/details
+   2: ^/company-documents/
